docs/tests/nameres/custom_types/invalid/GenStructOpOverload.src
// Invalid 

struct str <T> {
    operator + (str a, str b) {
        
    }
}